N'era vero. Aggiunto getPosts. da fare i ToDo
